# attendance

./: .gitignore  main.py  pyproject.toml  vercel.json
.qwen/: settings.json
frontend/: build.sh  index.html  package-lock.json  package.json  vite.config.js
frontend/dist-electron/: main.js  preload.js
frontend/electron/: main.js  preload.js
frontend/src/: App.vue  main.js
frontend/src/components/: ColorTable.vue  FileSelector.vue  ResultsPanel.vue
frontend/src/services/: api.js
