[project]
name = "attendance-tracker"
version = "0.1.0"
description = "Трекер посещаемости по цветам ячеек Excel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openpyxl>=3.1.0", "Pillow>=10.0.0"]

[project.scripts]
attendance-tracker = "attendance_tracker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyinstaller>=6.0.0"]
